--- a/index.html
+++ b/index.html
@@ -33,10 +33,28 @@
         </div>
         <div class="drawer-side">
             <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-            <ul class="menu bg-base-200 text-base-content min-h-full w-80 p-4">
+            <ul class="menu bg-base-200 text-base-content min-h-full w-80 p-4 menu_cus flex flex-col gap-4">
                 <!-- Sidebar content here -->
-                <li><a>Sidebar Item 1</a></li>
-                <li><a>Sidebar Item 2</a></li>
+                <li>
+                    <a href="#"><i class="fa-solid fa-house"></i></a>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-solid fa-tags"></i></a>
+                    <a href="#">Specials</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-solid fa-user"></i></a>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-solid fa-square-caret-down"></i></a>
+                    <a href="#">Menu Cart</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fa-solid fa-phone"></i></a>
+                    <a href="#">Contact</a>
+                </li>
             </ul>
         </div>
     </div>
