Greens Beetroot Social Section Completed

--- a/index.html
+++ b/index.html
@@ -121,6 +121,53 @@
         </div>
     </section>
     <!--*Navbar Section Ends-->
+    <!--*Greens Beetroot Social Section Starts-->
+    <section class="greens_beetroot_social_wrap_main">
+        <div class="greens_beetroot_social_wrap_inner flex flex-row justify-center items-center">
+            <div class="greens_main">
+                <div class="greens_inner flex flex-col justify-center items-center gap-4">
+                    <div class="for_icon">
+                        <img src="dist/img/icon-vege.svg" alt="">
+                    </div>
+                    <div class="for_big_txt">
+                        <p>TURNIP GREENS</p>
+                    </div>
+                    <div class="for_small_txt">
+                        <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon
+                        napa cabbage.</p>
+                    </div>
+                </div>                
+            </div>
+            <div class="beetroot_main">
+                <div class="beetroot_inner flex flex-col justify-center items-center gap-4">
+                    <div class="for_icon">
+                        <img src="dist/img/icon-coffee.svg" alt="">
+                    </div>
+                    <div class="for_big_txt">
+                        <p>BEETROOT WATER</p>
+                    </div>
+                    <div class="for_small_txt">
+                        <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie
+                        turnip leek.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="social_main">
+                <div class="social_inner flex flex-col justify-center items-center gap-4">
+                    <div class="for_icon">
+                        <img src="dist/img/icon-sweet.svg" alt="">
+                    </div>
+                    <div class="for_big_txt">
+                        <p>GET SOCIAL</p>
+                    </div>
+                    <div class="for_small_txt">
+                        <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie
+                        turnip leek.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
