Special Section Title With Responsive Complete

--- a/index.html
+++ b/index.html
@@ -168,6 +168,19 @@
             </div>
         </div>
     </section>
+    <!--*Greens Beetroot Social Section Ends-->
+    <!--*Special Section Title Starts-->
+    <section class="special_title_main">
+        <div class="special_title_inner flex flex-col">
+            <div class="for_header flex justify-center">
+                <p>This month specials</p>
+            </div>
+            <div class="for_divider flex justify-center">
+                <img src="dist/img/divider.svg" alt="">
+            </div>
+        </div>
+    </section>
+    <!--*Special Section Title Ends-->
 
 
 
