Special Section Done With Responsive

--- a/index.html
+++ b/index.html
@@ -181,7 +181,120 @@
         </div>
     </section>
     <!--*Special Section Title Ends-->
-
+    <!--*Special Section Starts-->
+    <section class="special_main">
+        <div class="special_inner grid md:grid-cols-2 lg:grid-cols-3">
+            <div class="greens_fava_main">
+                <div class="for_img">
+                    <img src="dist/img/specialOne.webp" alt="">
+                </div>
+                <div class="for_content">
+                    <div class="for_heading">
+                        <p>Greens fava</p>
+                    </div>
+                    <div class="for_underline"></div>
+                    <div class="for_txt">
+                        <p>Nori grape silver beet broccoli kombu beet</p>
+                    </div>
+                    <div>
+                        <p>greens fava</p>
+                    </div>
+                    <span>19$</span>
+                </div>
+            </div>
+            <div class="celery_quand_main">
+                <div class="for_img">
+                    <img src="dist/img/specialTwo.webp" alt="">
+                </div>
+                <div class="for_content">
+                    <div class="for_heading">
+                        <p>Celery quand</p>
+                    </div>
+                    <div class="for_underline"></div>
+                    <div class="for_txt">
+                        <p>Celery quandong swiss chard chicory earthnut</p>
+                    </div>
+                    <div>
+                        <p>pea</p>
+                    </div>
+                    <span>18$</span>
+                </div>
+            </div>
+            <div class="pea_horser_main">
+                <div class="for_img">
+                    <img src="dist/img/specialThree.webp" alt="">
+                </div>
+                <div class="for_content">
+                    <div class="for_heading">
+                        <p>Pea horser</p>
+                    </div>
+                    <div class="for_underline"></div>
+                    <div class="for_txt">
+                        <p>Kohlrabi radish okra azuki bean corn fava</p>
+                    </div>
+                    <div>
+                        <p>bean mustard</p>
+                    </div>
+                    <span>7$</span>
+                </div>
+            </div>
+            <div class="soko_radicchio_main">
+                <div class="for_content">
+                    <div class="for_heading">
+                        <p>Soko radicchio</p>
+                    </div>
+                    <div class="for_underline"></div>
+                    <div class="for_txt">
+                        <p>Dandelion zucchini burdock yarrow chickpea</p>
+                    </div>
+                    <div>
+                        <p>dandelion</p>
+                    </div>
+                    <span>25$</span>
+                </div>
+                <div class="for_img">
+                    <img src="dist/img/specialFour.webp" alt="">
+                </div>
+            </div>
+            <div class="tigernut_main">
+                <div class="for_content">
+                    <div class="for_heading">
+                        <p>Tigernut</p>
+                    </div>
+                    <div class="for_underline"></div>
+                    <div class="for_txt">
+                        <p>Grape silver beet watercress potato</p>
+                    </div>
+                    <div>
+                        <p>tigernut</p>
+                    </div>
+                    <span>14$</span>
+                </div>
+                <div class="for_img">
+                    <img src="dist/img/specialFive.webp" alt="">
+                </div>
+            </div>
+            <div class="yarrow_sweet_main">
+                <div class="for_content">
+                    <div class="for_heading">
+                        <p>Yarrow sweet</p>
+                    </div>
+                    <div class="for_underline"></div>
+                    <div class="for_txt">
+                        <p>Gumbo kakadu plum komatsuna black-eyed</p>
+                    </div>
+                    <div>
+                        <p>pea green</p>
+                    </div>
+                    <span>8$</span>
+                </div>
+                <div class="for_img">
+                    <img src="dist/img/specialSix.webp" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--*Special Section Ends--> 
 
 
 
