About us page completed with responsive

--- a/index.html
+++ b/index.html
@@ -294,8 +294,36 @@
             </div>
         </div>
     </section>
-    <!--*Special Section Ends--> 
-
+    <!--*Special Section Ends-->
+    <!--*About Us Section Starts-->
+    <section class="about_us_main">
+        <div class="about_us_inner flex flex-row justify-center items-center">
+            <div class="about_us_content_main">
+                <div class="about_us flex flex-col justify-center items-center gap-3">
+                    <div class="for_title flex flex-col justify-center items-center">
+                        <div class="for_header flex justify-center items-center">
+                            <p>About us</p>
+                        </div>
+                        <div class="for_divider">
+                            <img src="dist/img/divider.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="for_txt text-center">
+                        <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black- eyed
+                            pea prairie
+                            turnip leek lentil turnip greens parsnip.</p>
+                    </div>
+                </div>
+                <div class="for_sign flex items-center justify-center">
+                    <img src="dist/img/signature.webp" alt="">
+                </div>
+            </div>
+            <div class="about_us_img_main">
+                <img src="dist/img/beans.webp" alt="">
+            </div>
+        </div>
+    </section>
+    <!--*About Us Section Ends-->
 
 
 
