Menu cart title with responsive complete

--- a/index.html
+++ b/index.html
@@ -324,6 +324,17 @@
         </div>
     </section>
     <!--*About Us Section Ends-->
+    <!--*Menu Cart Title Starts-->
+    <section class="menu_cart_title_main">
+        <div class="menu_cart_title_inner flex flex-col">
+            <div class="for_header flex justify-center">
+                <p>Menu cart</p>
+            </div>
+            <div class="for_divider flex justify-center">
+                <img src="dist/img/divider.svg" alt="">
+            </div>
+        </div>
+    </section>
 
 
 
