Menu cart Sectionn and Responsive Complete

--- a/index.html
+++ b/index.html
@@ -335,12 +335,189 @@
             </div>
         </div>
     </section>
+    <!--*Menu Cart Title Ends-->
+    <!--*Menu Cart Section Starts-->
+    <section class="menu_cart_main">
+        <div class="menu_cart_inner">
+            <div class="menu for_filter_button flex flex-row justify-center gap-5">
+                <button class="filter" data-filter=".starters">Starters</button>
+                <button class="filter" data-filter=".main-dishes">Main Dishes</button>
+                <button class="filter" data-filter=".desserts">Desserts</button>
+                <button class="filter" data-filter=".drinks">Drinks</button>
+            </div>
+            <div class="menu_container flex flex-row justify-evenly">
+                <div class="one starters">
+                    <div class="menu_item">
+                        <div class="item_name">SMOKED RICOTTA TERRINE<span>.......................................</span>$12
+                        </div>
+                        <div class="item_description">ricotta, shallots, cheddar, capers</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">SAMPHIRE FRITTERS WITH FENNEL CEVICHE<span>...............</span>$19</div>
+                        <div class="item_description">fresh samphire, plain flour, cornflour, eggs, fennel</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">PAN FRIED COURGETTE FLOWERS<span>...............................</span>$13
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">SMOKED RICOTTA TERRINE<span>.......................................</span>$19
+                        </div>
+                        <div class="item_description">ricotta, shallots, cheddar, capers</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">PAN FRIED COURGETTE FLOWERS<span>...............................</span>$19
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">FRIED COURGETTE FLOWERS<span>.....................................</span>$19
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                </div>
+                <div class="one starters">
+                    <div class="menu_item">
+                        <div class="item_name">SMOKED RICOTTA TERRINE<span>.......................................</span>$12
+                        </div>
+                        <div class="item_description">ricotta, shallots, cheddar, capers</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">SAMPHIRE FRITTERS WITH FENNEL CEVICHE<span>...............</span>$19</div>
+                        <div class="item_description">fresh samphire, plain flour, cornflour, eggs, fennel</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">PAN FRIED COURGETTE FLOWERS<span>...............................</span>$13
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">SMOKED RICOTTA TERRINE<span>.......................................</span>$19
+                        </div>
+                        <div class="item_description">ricotta, shallots, cheddar, capers</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">PAN FRIED COURGETTE FLOWERS<span>...............................</span>$19
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">FRIED COURGETTE FLOWERS<span>.....................................</span>$19
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                </div>
+                <div class="one main-dishes">
+                    <div class="menu_item">
+                        <div class="item_name">PAN FRIED COURGETTE FLOWERS<span>...............................</span>$13
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">SMOKED RICOTTA TERRINE<span>.......................................</span>$19
+                        </div>
+                        <div class="item_description">ricotta, shallots, cheddar, capers</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">PAN FRIED COURGETTE FLOWERS<span>...............................</span>$19
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">FRIED COURGETTE FLOWERS<span>.....................................</span>$19
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                </div>
+                <div class="one main-dishes">
+                    <div class="menu_item">
+                        <div class="item_name">PAN FRIED COURGETTE FLOWERS<span>...............................</span>$13
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">SMOKED RICOTTA TERRINE<span>.......................................</span>$19
+                        </div>
+                        <div class="item_description">ricotta, shallots, cheddar, capers</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">PAN FRIED COURGETTE FLOWERS<span>...............................</span>$19
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">FRIED COURGETTE FLOWERS<span>.....................................</span>$19
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                </div>
+                <div class="one desserts">
+                    <div class="menu_item">
+                        <div class="item_name">PAN FRIED COURGETTE FLOWERS<span>...............................</span>$13
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">SMOKED RICOTTA TERRINE<span>.......................................</span>$19
+                        </div>
+                        <div class="item_description">ricotta, shallots, cheddar, capers</div>
+                    </div>
+                </div>
+                <div class="one desserts">
+                    <div class="menu_item">
+                        <div class="item_name">PAN FRIED COURGETTE FLOWERS<span>...............................</span>$13
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">SMOKED RICOTTA TERRINE<span>.......................................</span>$19
+                        </div>
+                        <div class="item_description">ricotta, shallots, cheddar, capers</div>
+                    </div>
+                </div>
+                <div class="one drinks">
+                    <div class="menu_item">
+                        <div class="item_name">SMOKED RICOTTA TERRINE<span>.......................................</span>$12
+                        </div>
+                        <div class="item_description">ricotta, shallots, cheddar, capers</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">SAMPHIRE FRITTERS WITH FENNEL CEVICHE<span>...............</span>$19</div>
+                        <div class="item_description">fresh samphire, plain flour, cornflour, eggs, fennel</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">PAN FRIED COURGETTE FLOWERS<span>...............................</span>$13
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                </div>
+                <div class="one drinks">
+                    <div class="menu_item">
+                        <div class="item_name">SMOKED RICOTTA TERRINE<span>.......................................</span>$12
+                        </div>
+                        <div class="item_description">ricotta, shallots, cheddar, capers</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">SAMPHIRE FRITTERS WITH FENNEL CEVICHE<span>...............</span>$19</div>
+                        <div class="item_description">fresh samphire, plain flour, cornflour, eggs, fennel</div>
+                    </div>
+                    <div class="menu_item">
+                        <div class="item_name">PAN FRIED COURGETTE FLOWERS<span>...............................</span>$13
+                        </div>
+                        <div class="item_description">courgette flowers, goats cheese, red onion, pine nuts</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--*Menu Cart Section Ends-->
 
 
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js" integrity="sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/fontawesome.min.js" integrity="sha512-NeFv3hB6XGV+0y96NVxoWIkhrs1eC3KXBJ9OJiTFktvbzJ/0Kk7Rmm9hJ2/c2wJjy6wG0a0lIgehHjCTDLRwWw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/regular.min.js" integrity="sha512-kOmvRi+0imoekwslOzP/X1LXQnzcttzqYYt3urKD4nhd5fMYwRfXgDS5Nh7b7pQjKPjBPSX9PmhCLrkfkxUcBQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
